syntax = "proto3";
package Shop.Application.DTOs.ProductLog;

message ProductLog {
  int32 log_id = 1;
  int32 product_id = 2;
  string action_type = 3;
  string old_value = 4;
  string new_value = 5;
  string changed_by = 6;
  string change_date = 7;
  optional string approval_status = 8;
  optional string reviewer_notes = 9;
}
